# antenna

./: .drone.yml  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  README.md  antenna.cabal  feed.xml  index.html  package.yaml  sites.html  sites.yaml  stack.yaml
.github/workflows/: build.yaml  update.yaml
app/: GetOpt.hs  Git.hs  Main.hs
app/Antenna/: Config.hs  Html.hs
config/: feeds.yaml  local.yaml
js/: main.js
lib/Options/: Magic.hs
lib/Options/Magic/: Breakable.hs  Enchantment.hs  Internal.hs
ofelia/: config.ini
src/: Antenna.hs
src/Antenna/: Cache.hs  Config.hs  Feed.hs  Types.hs
src/Antenna/Server/: Config.hs  Types.hs
static/: index.html
static/js/: main.js
