name:                antenna
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Tatsuya Hirose
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Antenna
                     , Antenna.Feed
                     , Antenna.Cache
                     , Antenna.Types
                     , Antenna.Config
                     , Antenna.Server.Types
                     , Antenna.Server.Config
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , atom-conduit
                     , binary
                     , blaze-html
                     , bytestring
                     , conduit
                     , extra
                     , filepath
                     , hedis
                     , heterocephalus
                     , http-conduit
                     , optparse-applicative
                     , rss-conduit
                     , uri-bytestring
                     , Spock
                     , text
                     , time
                     , wai-cors
                     , wai-middleware-static
                     , xml-conduit
                     , xml-types
                     , yaml
                     , time
                     , transformers
  default-language:    Haskell2010

executable antenna-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , antenna
  default-language:    Haskell2010

test-suite antenna-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , antenna
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-jp/antenna
